# cli-termianl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  cli_terminal.py  install.sh  justfile  requirements.txt
.github/workflows/: ci.yml
cli_terminal/: __init__.py  __main__.py  app.py
cli_terminal/config/: defaults.py  manager.py
cli_terminal/input/: history.py  macros.py  templates.py
cli_terminal/output/: collapse.py  highlight.py  renderer.py  search.py
cli_terminal/widgets/: display.py  input.py
docs/superpowers/plans/: 2026-04-17-template-form-enhancement.md
examples/: test_target.rs
src/: app.rs  lib.rs  main.rs
src/config/: defaults.rs  defaults.yaml  manager.rs
src/input/: history.rs  macros.rs  mod.rs  templates.rs
src/output/: collapse.rs  highlight.rs  mod.rs  search.rs
src/widgets/: display.rs  input.rs
tests/: __init__.py  test_config.py  test_highlight.py  test_history.py  test_macros.py  test_search.py  test_templates.py
