[package]
name = "cli-terminal"
version = "0.1.0"
edition = "2024"
description = "TUI terminal interaction enhancer"
license = "MIT"
repository = "https://github.com/buumotfa4djz6-tech/cli-terminal"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
dirs = "5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-segmentation = "1"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
